--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -191,7 +191,7 @@
 
         <!-- Obra 1 -->
         <div class="art-card">
-            <img src="{% static 'core/Imagen1.png' %}" alt="Obra vendida 1">
+            <img src="media/obra/Imagen1.png" alt="Obra vendida 1">
             <div class="art-info">
                 <h3>MORCHELLA ESPATULA ROSADA</h3>
                 <p>hice florecer este funji raro que le brota unas aves de espatulas rosadas</p>
