--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -202,7 +202,7 @@
 
         <!-- Obra 2 -->
         <div class="art-card">
-            <img src="{% static 'core/Imagen2.png' %}" alt="Obra vendida 2">
+            <img src="media/obras/Imagen2.png" alt="Obra vendida 2">
             <div class="art-info">
                 <h3> CACTASEA DE CONDORES </h3>
                 <p>Desde una cactasea surgieron extrañamente estos condores obserbadores.</p>
@@ -213,7 +213,7 @@
 
         <!-- Obra 3 -->
         <div class="art-card">
-            <img src="{% static 'core/Imagen3.png' %}" alt="Obra vendida 3">
+            <img src="media/obras/Imagen3.png" alt="Obra vendida 3">
             <div class="art-info">
                 <h3>NOMBRE DESCONOCIDO</h3>
                 <p>Las garzas de la maceta de la suerte las garzas crecieron en la maceta de tres patas de la suerte..</p>
