--- a/core/templates/core/quienes.html
+++ b/core/templates/core/quienes.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="about-image">
-            <img src="{% static 'core/imagen1disponible.png' %}" alt="Cuadro Gigante" class="img-fluid rounded shadow">
+            <img src="media/obras/imagen1disponible.png" alt="Cuadro Gigante" class="img-fluid rounded shadow">
         </div>
     </div>
 </section>
