--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -174,7 +174,7 @@
 <body>
 
     <header class="site-header text-center">
-        <img src="media/obras/logo.png" alt="Logo Cristian Erre" class="header-logo">
+        <img src="{% static 'core/logo.png' %}" alt="Logo Cristian Erre" class="header-logo">
         
         <h1 class="site-title">Arte de Cristian Erre</h1>
         <p class="site-subtitle">Arte que inspira emociones</p>
